--- a/main.html
+++ b/main.html
@@ -8,6 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="css-box-model">
+		box
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
